Fix organizations on Mobile version

--- a/5/assets/css/style.css
+++ b/5/assets/css/style.css
@@ -603,6 +603,7 @@ button, .btn {
     /* Organization */
     .organization {
         padding: 60px 0;
+        min-height: auto;
     }
     .organization__title {
         font-size: 20px;
